--- a/fastapi_backend/requirements.txt
+++ b/fastapi_backend/requirements.txt
@@ -41,3 +41,9 @@ uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
+# Added for features below
+PyJWT==2.9.0
+paho-mqtt==2.1.0
+firebase-admin==6.6.0
+stripe==10.9.0
+razorpay==1.4.2
